; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40611.c_madviseThread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40611.c_madviseThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@map = common dso_local global i32 0, align 4
@MADV_DONTNEED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"madvise %d\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @madviseThread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** %4, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %19, %1
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 100000000
  br i1 %10, label %11, label %22

11:                                               ; preds = %8
  %12 = load i32, i32* @map, align 4
  %13 = load i32, i32* @MADV_DONTNEED, align 4
  %14 = call i64 @madvise(i32 %12, i32 100, i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %16, %14
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %6, align 4
  br label %19

19:                                               ; preds = %11
  %20 = load i32, i32* %5, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %5, align 4
  br label %8

22:                                               ; preds = %8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load i8*, i8** %2, align 8
  ret i8* %25
}

declare dso_local i64 @madvise(i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
